# evitable

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml  bs-config.js  release.toml
.ci/rust/jobs/: build.yml  lint.yml
.ci/rust/steps/: test.yml
evitable/: Cargo.toml
evitable-derive/: Cargo.toml
evitable-derive-core/: Cargo.toml
evitable-derive-core/src/: attrs.rs  description.rs  display.rs  from.rs  from_context.rs  kinds.rs  lib.rs  trait_assert.rs  visibility.rs
evitable-derive/src/: lib.rs
evitable-derive/tests/: display.rs  struct_clone_copy.rs  with_context.rs
evitable/src/: lib.rs
evitable/tests/: display.rs  from_other.rs  macros.rs  multiple.rs  simple.rs  struct_clone_copy.rs  with_context.rs
syn-meta-ext/: Cargo.toml
syn-meta-ext/src/: ast.rs  from_derive_input.rs  from_field.rs  from_meta.rs  from_variant.rs  lib.rs
syn-meta-ext/src/error/: kind.rs  mod.rs
