[package]
name = "evitable-derive-core"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

[dependencies]
ident_case = "1"
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full", "extra-traits"] }
evitable-syn-meta-ext = { version = "0.1", path = "../syn-meta-ext" }
