[package]
name = "evitable-derive-core"
version = "0.2.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
homepage = "https://github.com/YoloDev/evitable"
repository = "https://github.com/YoloDev/evitable"
description = "Derive implementation for evitable"
license = "MIT"

[dependencies]
ident_case = "1"
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["full", "extra-traits"] }
evitable-syn-meta-ext = { version = "0.2.0", path = "../syn-meta-ext" }
