[package]
name = "evitable-derive-core"
version = "0.4.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
homepage = "https://github.com/YoloDev/evitable"
repository = "https://github.com/YoloDev/evitable"
description = "Derive implementation for evitable"
license = "MIT"

[dependencies]
ident_case = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
evitable-syn-meta-ext = { version = "^0.5.0", path = "../syn-meta-ext" }
