[package]
name = "evitable-derive"
version = "0.1.1"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
homepage = "https://github.com/YoloDev/evitable"
repository = "https://github.com/YoloDev/evitable"
description = "Derive implementation for evitable"
license = "MIT"

[dependencies]
evitable-derive-core = { version = "0.1.1", path = "../evitable-derive-core" }

[lib]
proc-macro = true
