[package]
name = "evitable"
version = "0.1.1"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
homepage = "https://github.com/YoloDev/evitable"
repository = "https://github.com/YoloDev/evitable"
description = "Custom error types with context and derive"
license = "MIT"

[dependencies]
evitable-derive = { version = "0.1.1", path = "../evitable-derive", optional = true }

[features]
default = ["derive"]
derive = ["evitable-derive"]
