[package]
name = "evitable"
version = "0.2.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
homepage = "https://github.com/YoloDev/evitable"
repository = "https://github.com/YoloDev/evitable"
description = "Custom error types with context and derive"
license = "MIT"

[dependencies]
evitable-derive = { version = "^0.3.0", path = "../evitable-derive", optional = true }
backtrace = { version = "0.3" }

[features]
default = ["derive"]
derive = ["evitable-derive"]
