[package]
name = "evitable-syn-meta-ext"
version = "0.3.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"
homepage = "https://github.com/YoloDev/evitable"
repository = "https://github.com/YoloDev/evitable"
description = "Helpers for syn metadata used by evitable-derive-core"
license = "MIT"

[features]
diagnostics = []
suggestions = ["strsim"]

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
strsim = { version = "0.7", optional = true }
ident_case = "1"
